--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
   "name": "truck-fridge",
   "version": "1.0.0",
+  "description": "Truck Fridge Control System",
+  "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "npm install"
   },
   "dependencies": {
-    "express": "^4.18.0"
+    "express": "^4.18.0",
+    "cors": "^2.8.5",
+    "body-parser": "^1.20.0"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
